Fix overflow

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -287,7 +287,7 @@ body {
 @media(min-width: 768px) {
     #mini-banners-container {
         padding: 0 1.5em;
-        margin-top: -3em;
+        margin-top: -4em;
     }
 
     #main-banners .carousel-caption {
